theme-refactor_fix-dashboard-layout: Fix overflow in safari.

--- a/scss/components/layout/dashboard-layout.scss
+++ b/scss/components/layout/dashboard-layout.scss
@@ -18,7 +18,8 @@
 
     .dashboard-layout__content {
       flex-grow: 1;
-      overflow: hidden auto;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
   }
 }
